src/minionlang.output
Terminals unused in grammar

   COMMENT_SINGLE
   COMMENT_MULTI


Grammar

    0 $accept: program $end

    1 program: global_declarations

    2 global_declarations: global_declaration
    3                    | global_declarations global_declaration

    4 global_declaration: preprocessor_directive
    5                   | function_definition
    6                   | declaration SEMICOLON
    7                   | SEMICOLON
    8                   | error SEMICOLON

    9 preprocessor_directive: INCLUDE HEADER_FILE
   10                       | DEFINE IDENTIFIER INTEGER_LITERAL
   11                       | DEFINE IDENTIFIER FLOAT_LITERAL
   12                       | DEFINE IDENTIFIER

   13 function_prologue: type_specifier IDENTIFIER

   14 main_prologue: type_specifier MAIN

   15 function_definition: main_prologue LPAREN RPAREN function_body
   16                    | main_prologue LPAREN parameter_list RPAREN function_body
   17                    | function_prologue LPAREN RPAREN function_body
   18                    | function_prologue LPAREN parameter_list RPAREN function_body
   19                    | function_prologue LPAREN RPAREN RETURN_TYPE_IND type_specifier function_body
   20                    | function_prologue LPAREN parameter_list RPAREN RETURN_TYPE_IND type_specifier function_body

   21 parameter_list: parameter
   22               | parameter_list COMMA parameter

   23 parameter: type_specifier IDENTIFIER
   24          | type_specifier IDENTIFIER LBRACKET RBRACKET

   25 type_specifier: TYPE_INT
   26               | TYPE_FLOAT
   27               | TYPE_DOUBLE
   28               | TYPE_LONG_INT
   29               | TYPE_CHAR
   30               | TYPE_BOOL
   31               | TYPE_VOID

   32 declaration: type_specifier declarator_list

   33 declarator_list: declarator
   34                | declarator_list COMMA declarator

   35 declarator: IDENTIFIER
   36           | IDENTIFIER OP_ASSIGN expression
   37           | IDENTIFIER LBRACKET INTEGER_LITERAL RBRACKET
   38           | IDENTIFIER LBRACKET INTEGER_LITERAL RBRACKET OP_ASSIGN LBRACE initializer_list RBRACE
   39           | IDENTIFIER LBRACKET RBRACKET OP_ASSIGN LBRACE initializer_list RBRACE

   40 initializer_list: expression
   41                 | initializer_list COMMA expression

   42 function_body: LBRACE RBRACE
   43              | LBRACE statement_list RBRACE

   44 block_start: /* empty */

   45 scoped_compound_statement: LBRACE block_start RBRACE
   46                          | LBRACE block_start statement_list RBRACE

   47 statement_list: statement
   48               | statement_list statement

   49 statement: declaration SEMICOLON
   50          | expression_statement
   51          | scoped_compound_statement
   52          | selection_statement
   53          | iteration_statement
   54          | jump_statement
   55          | io_statement
   56          | SEMICOLON
   57          | error SEMICOLON

   58 expression_statement: expression SEMICOLON

   59 selection_statement: IF LPAREN expression RPAREN statement
   60                    | IF LPAREN expression RPAREN statement ELSE statement
   61                    | IF LPAREN expression RPAREN statement else_if_chain
   62                    | IF LPAREN expression RPAREN statement else_if_chain ELSE statement
   63                    | SWITCH LPAREN expression RPAREN LBRACE case_list RBRACE

   64 else_if_chain: ELSE_IF LPAREN expression RPAREN statement
   65              | else_if_chain ELSE_IF LPAREN expression RPAREN statement

   66 case_list: case_statement
   67          | case_list case_statement

   68 case_statement: CASE expression COLON statement_list
   69               | CASE expression COLON
   70               | DEFAULT COLON statement_list
   71               | DEFAULT COLON

   72 iteration_statement: WHILE LPAREN expression RPAREN statement
   73                    | DO scoped_compound_statement WHILE LPAREN expression RPAREN SEMICOLON
   74                    | FOR LPAREN for_init COLON expression COLON for_update RPAREN statement
   75                    | FOR LPAREN for_init COLON COLON for_update RPAREN statement
   76                    | FOR LPAREN COLON expression COLON RPAREN statement

   77 for_init: declaration
   78         | expression

   79 for_update: expression
   80           | /* empty */

   81 jump_statement: RETURN SEMICOLON
   82               | RETURN expression SEMICOLON
   83               | BREAK SEMICOLON
   84               | CONTINUE SEMICOLON

   85 io_statement: PRINT LPAREN argument_list RPAREN SEMICOLON
   86             | SCAN LPAREN argument_list RPAREN SEMICOLON

   87 expression: assignment_expression

   88 assignment_expression: logical_or_expression
   89                      | assignment_target OP_ASSIGN assignment_expression

   90 assignment_target: IDENTIFIER
   91                  | IDENTIFIER LBRACKET expression RBRACKET

   92 logical_or_expression: logical_and_expression
   93                      | logical_or_expression OP_OR logical_and_expression

   94 logical_and_expression: logical_xor_expression
   95                       | logical_and_expression OP_AND logical_xor_expression

   96 logical_xor_expression: equality_expression
   97                       | logical_xor_expression OP_XOR equality_expression

   98 equality_expression: relational_expression
   99                    | equality_expression OP_EQ relational_expression
  100                    | equality_expression OP_NE relational_expression

  101 relational_expression: additive_expression
  102                      | relational_expression OP_LT additive_expression
  103                      | relational_expression OP_GT additive_expression
  104                      | relational_expression OP_LE additive_expression
  105                      | relational_expression OP_GE additive_expression

  106 additive_expression: multiplicative_expression
  107                    | additive_expression OP_ADD multiplicative_expression
  108                    | additive_expression OP_SUB multiplicative_expression

  109 multiplicative_expression: unary_expression
  110                          | multiplicative_expression OP_MUL unary_expression
  111                          | multiplicative_expression OP_DIV unary_expression
  112                          | multiplicative_expression OP_MOD unary_expression

  113 unary_expression: postfix_expression
  114                 | OP_NOT unary_expression
  115                 | OP_SUB unary_expression

  116 postfix_expression: primary_expression
  117                   | IDENTIFIER LBRACKET expression RBRACKET
  118                   | function_call

  119 primary_expression: IDENTIFIER
  120                   | INTEGER_LITERAL
  121                   | FLOAT_LITERAL
  122                   | STRING_LITERAL
  123                   | CHAR_LITERAL
  124                   | LPAREN expression RPAREN

  125 function_call: IDENTIFIER LPAREN call_arguments_opt RPAREN
  126              | math_function_call

  127 call_arguments_opt: /* empty */
  128                   | call_argument_list

  129 call_argument_list: assignment_expression
  130                   | call_argument_list COMMA assignment_expression

  131 math_function_call: FUNC_POWER LPAREN expression COMMA expression RPAREN
  132                   | FUNC_SQRT LPAREN expression RPAREN
  133                   | FUNC_FLOOR LPAREN expression RPAREN
  134                   | FUNC_CEIL LPAREN expression RPAREN
  135                   | FUNC_ABS LPAREN expression RPAREN
  136                   | FUNC_LOG LPAREN expression RPAREN
  137                   | FUNC_SIN LPAREN expression RPAREN
  138                   | FUNC_COS LPAREN expression RPAREN
  139                   | FUNC_TAN LPAREN expression RPAREN
  140                   | FUNC_ASIN LPAREN expression RPAREN
  141                   | FUNC_ACOS LPAREN expression RPAREN
  142                   | FUNC_ATAN LPAREN expression RPAREN
  143                   | FUNC_PRIME LPAREN expression RPAREN

  144 argument_list: assignment_expression
  145              | argument_list COMMA assignment_expression


Terminals, with rules where they appear

$end (0) 0
error (256) 8 57
INCLUDE (258) 9
DEFINE (259) 10 11 12
HEADER_FILE (260) 9
TYPE_INT (261) 25
TYPE_FLOAT (262) 26
TYPE_DOUBLE (263) 27
TYPE_LONG_INT (264) 28
TYPE_CHAR (265) 29
TYPE_BOOL (266) 30
TYPE_VOID (267) 31
IF (268) 59 60 61 62
ELSE_IF (269) 64 65
ELSE (270) 60 62
FOR (271) 74 75 76
WHILE (272) 72 73
DO (273) 73
SWITCH (274) 63
CASE (275) 68 69
DEFAULT (276) 70 71
BREAK (277) 83
CONTINUE (278) 84
RETURN (279) 81 82
MAIN (280) 14
PRINT (281) 85
SCAN (282) 86
RETURN_TYPE_IND (283) 19 20
FUNC_POWER (284) 131
FUNC_SQRT (285) 132
FUNC_FLOOR (286) 133
FUNC_CEIL (287) 134
FUNC_ABS (288) 135
FUNC_LOG (289) 136
FUNC_SIN (290) 137
FUNC_COS (291) 138
FUNC_TAN (292) 139
FUNC_ASIN (293) 140
FUNC_ACOS (294) 141
FUNC_ATAN (295) 142
FUNC_PRIME (296) 143
OP_ADD (297) 107
OP_SUB (298) 108 115
OP_MUL (299) 110
OP_DIV (300) 111
OP_MOD (301) 112
OP_AND (302) 95
OP_OR (303) 93
OP_NOT (304) 114
OP_XOR (305) 97
OP_LT (306) 102
OP_GT (307) 103
OP_LE (308) 104
OP_GE (309) 105
OP_EQ (310) 99
OP_NE (311) 100
OP_ASSIGN (312) 36 38 39 89
SEMICOLON (313) 6 7 8 49 56 57 58 73 81 82 83 84 85 86
COLON (314) 68 69 70 71 74 75 76
COMMA (315) 22 34 41 130 131 145
LPAREN (316) 15 16 17 18 19 20 59 60 61 62 63 64 65 72 73 74 75 76
    85 86 124 125 131 132 133 134 135 136 137 138 139 140 141 142 143
RPAREN (317) 15 16 17 18 19 20 59 60 61 62 63 64 65 72 73 74 75 76
    85 86 124 125 131 132 133 134 135 136 137 138 139 140 141 142 143
LBRACE (318) 38 39 42 43 45 46 63
RBRACE (319) 38 39 42 43 45 46 63
LBRACKET (320) 24 37 38 39 91 117
RBRACKET (321) 24 37 38 39 91 117
INTEGER_LITERAL (322) 10 37 38 120
FLOAT_LITERAL (323) 11 121
STRING_LITERAL (324) 122
CHAR_LITERAL (325) 123
IDENTIFIER (326) 10 11 12 13 23 24 35 36 37 38 39 90 91 117 119 125
COMMENT_SINGLE (327)
COMMENT_MULTI (328)
UMINUS (329)
LOWER_THAN_ELSE (330)


Nonterminals, with rules where they appear

$accept (76)
    on left: 0
program (77)
    on left: 1, on right: 0
global_declarations (78)
    on left: 2 3, on right: 1 3
global_declaration (79)
    on left: 4 5 6 7 8, on right: 2 3
preprocessor_directive (80)
    on left: 9 10 11 12, on right: 4
function_prologue (81)
    on left: 13, on right: 17 18 19 20
main_prologue (82)
    on left: 14, on right: 15 16
function_definition (83)
    on left: 15 16 17 18 19 20, on right: 5
parameter_list (84)
    on left: 21 22, on right: 16 18 20 22
parameter (85)
    on left: 23 24, on right: 21 22
type_specifier (86)
    on left: 25 26 27 28 29 30 31, on right: 13 14 19 20 23 24 32
declaration (87)
    on left: 32, on right: 6 49 77
declarator_list (88)
    on left: 33 34, on right: 32 34
declarator (89)
    on left: 35 36 37 38 39, on right: 33 34
initializer_list (90)
    on left: 40 41, on right: 38 39 41
function_body (91)
    on left: 42 43, on right: 15 16 17 18 19 20
block_start (92)
    on left: 44, on right: 45 46
scoped_compound_statement (93)
    on left: 45 46, on right: 51 73
statement_list (94)
    on left: 47 48, on right: 43 46 48 68 70
statement (95)
    on left: 49 50 51 52 53 54 55 56 57, on right: 47 48 59 60 61 62
    64 65 72 74 75 76
expression_statement (96)
    on left: 58, on right: 50
selection_statement (97)
    on left: 59 60 61 62 63, on right: 52
else_if_chain (98)
    on left: 64 65, on right: 61 62 65
case_list (99)
    on left: 66 67, on right: 63 67
case_statement (100)
    on left: 68 69 70 71, on right: 66 67
iteration_statement (101)
    on left: 72 73 74 75 76, on right: 53
for_init (102)
    on left: 77 78, on right: 74 75
for_update (103)
    on left: 79 80, on right: 74 75
jump_statement (104)
    on left: 81 82 83 84, on right: 54
io_statement (105)
    on left: 85 86, on right: 55
expression (106)
    on left: 87, on right: 36 40 41 58 59 60 61 62 63 64 65 68 69 72
    73 74 76 78 79 82 91 117 124 131 132 133 134 135 136 137 138 139
    140 141 142 143
assignment_expression (107)
    on left: 88 89, on right: 87 89 129 130 144 145
assignment_target (108)
    on left: 90 91, on right: 89
logical_or_expression (109)
    on left: 92 93, on right: 88 93
logical_and_expression (110)
    on left: 94 95, on right: 92 93 95
logical_xor_expression (111)
    on left: 96 97, on right: 94 95 97
equality_expression (112)
    on left: 98 99 100, on right: 96 97 99 100
relational_expression (113)
    on left: 101 102 103 104 105, on right: 98 99 100 102 103 104 105
additive_expression (114)
    on left: 106 107 108, on right: 101 102 103 104 105 107 108
multiplicative_expression (115)
    on left: 109 110 111 112, on right: 106 107 108 110 111 112
unary_expression (116)
    on left: 113 114 115, on right: 109 110 111 112 114 115
postfix_expression (117)
    on left: 116 117 118, on right: 113
primary_expression (118)
    on left: 119 120 121 122 123 124, on right: 116
function_call (119)
    on left: 125 126, on right: 118
call_arguments_opt (120)
    on left: 127 128, on right: 125
call_argument_list (121)
    on left: 129 130, on right: 128 130
math_function_call (122)
    on left: 131 132 133 134 135 136 137 138 139 140 141 142 143, on right:
    126
argument_list (123)
    on left: 144 145, on right: 85 86 145


state 0

    0 $accept: . program $end

    error          shift, and go to state 1
    INCLUDE        shift, and go to state 2
    DEFINE         shift, and go to state 3
    TYPE_INT       shift, and go to state 4
    TYPE_FLOAT     shift, and go to state 5
    TYPE_DOUBLE    shift, and go to state 6
    TYPE_LONG_INT  shift, and go to state 7
    TYPE_CHAR      shift, and go to state 8
    TYPE_BOOL      shift, and go to state 9
    TYPE_VOID      shift, and go to state 10
    SEMICOLON      shift, and go to state 11

    program                 go to state 12
    global_declarations     go to state 13
    global_declaration      go to state 14
    preprocessor_directive  go to state 15
    function_prologue       go to state 16
    main_prologue           go to state 17
    function_definition     go to state 18
    type_specifier          go to state 19
    declaration             go to state 20


state 1

    8 global_declaration: error . SEMICOLON

    SEMICOLON  shift, and go to state 21


state 2

    9 preprocessor_directive: INCLUDE . HEADER_FILE

    HEADER_FILE  shift, and go to state 22


state 3

   10 preprocessor_directive: DEFINE . IDENTIFIER INTEGER_LITERAL
   11                       | DEFINE . IDENTIFIER FLOAT_LITERAL
   12                       | DEFINE . IDENTIFIER

    IDENTIFIER  shift, and go to state 23


state 4

   25 type_specifier: TYPE_INT .

    $default  reduce using rule 25 (type_specifier)


state 5

   26 type_specifier: TYPE_FLOAT .

    $default  reduce using rule 26 (type_specifier)


state 6

   27 type_specifier: TYPE_DOUBLE .

    $default  reduce using rule 27 (type_specifier)


state 7

   28 type_specifier: TYPE_LONG_INT .

    $default  reduce using rule 28 (type_specifier)


state 8

   29 type_specifier: TYPE_CHAR .

    $default  reduce using rule 29 (type_specifier)


state 9

   30 type_specifier: TYPE_BOOL .

    $default  reduce using rule 30 (type_specifier)


state 10

   31 type_specifier: TYPE_VOID .

    $default  reduce using rule 31 (type_specifier)


state 11

    7 global_declaration: SEMICOLON .

    $default  reduce using rule 7 (global_declaration)


state 12

    0 $accept: program . $end

    $end  shift, and go to state 24


state 13

    1 program: global_declarations .
    3 global_declarations: global_declarations . global_declaration

    error          shift, and go to state 1
    INCLUDE        shift, and go to state 2
    DEFINE         shift, and go to state 3
    TYPE_INT       shift, and go to state 4
    TYPE_FLOAT     shift, and go to state 5
    TYPE_DOUBLE    shift, and go to state 6
    TYPE_LONG_INT  shift, and go to state 7
    TYPE_CHAR      shift, and go to state 8
    TYPE_BOOL      shift, and go to state 9
    TYPE_VOID      shift, and go to state 10
    SEMICOLON      shift, and go to state 11

    $end  reduce using rule 1 (program)

    global_declaration      go to state 25
    preprocessor_directive  go to state 15
    function_prologue       go to state 16
    main_prologue           go to state 17
    function_definition     go to state 18
    type_specifier          go to state 19
    declaration             go to state 20


state 14

    2 global_declarations: global_declaration .

    $default  reduce using rule 2 (global_declarations)


state 15

    4 global_declaration: preprocessor_directive .

    $default  reduce using rule 4 (global_declaration)


state 16

   17 function_definition: function_prologue . LPAREN RPAREN function_body
   18                    | function_prologue . LPAREN parameter_list RPAREN function_body
   19                    | function_prologue . LPAREN RPAREN RETURN_TYPE_IND type_specifier function_body
   20                    | function_prologue . LPAREN parameter_list RPAREN RETURN_TYPE_IND type_specifier function_body

    LPAREN  shift, and go to state 26


state 17

   15 function_definition: main_prologue . LPAREN RPAREN function_body
   16                    | main_prologue . LPAREN parameter_list RPAREN function_body

    LPAREN  shift, and go to state 27


state 18

    5 global_declaration: function_definition .

    $default  reduce using rule 5 (global_declaration)


state 19

   13 function_prologue: type_specifier . IDENTIFIER
   14 main_prologue: type_specifier . MAIN
   32 declaration: type_specifier . declarator_list

    MAIN        shift, and go to state 28
    IDENTIFIER  shift, and go to state 29

    declarator_list  go to state 30
    declarator       go to state 31


state 20

    6 global_declaration: declaration . SEMICOLON

    SEMICOLON  shift, and go to state 32


state 21

    8 global_declaration: error SEMICOLON .

    $default  reduce using rule 8 (global_declaration)


state 22

    9 preprocessor_directive: INCLUDE HEADER_FILE .

    $default  reduce using rule 9 (preprocessor_directive)


state 23

   10 preprocessor_directive: DEFINE IDENTIFIER . INTEGER_LITERAL
   11                       | DEFINE IDENTIFIER . FLOAT_LITERAL
   12                       | DEFINE IDENTIFIER .

    INTEGER_LITERAL  shift, and go to state 33
    FLOAT_LITERAL    shift, and go to state 34

    $default  reduce using rule 12 (preprocessor_directive)


state 24

    0 $accept: program $end .

    $default  accept


state 25

    3 global_declarations: global_declarations global_declaration .

    $default  reduce using rule 3 (global_declarations)


state 26

   17 function_definition: function_prologue LPAREN . RPAREN function_body
   18                    | function_prologue LPAREN . parameter_list RPAREN function_body
   19                    | function_prologue LPAREN . RPAREN RETURN_TYPE_IND type_specifier function_body
   20                    | function_prologue LPAREN . parameter_list RPAREN RETURN_TYPE_IND type_specifier function_body

    TYPE_INT       shift, and go to state 4
    TYPE_FLOAT     shift, and go to state 5
    TYPE_DOUBLE    shift, and go to state 6
    TYPE_LONG_INT  shift, and go to state 7
    TYPE_CHAR      shift, and go to state 8
    TYPE_BOOL      shift, and go to state 9
    TYPE_VOID      shift, and go to state 10
    RPAREN         shift, and go to state 35

    parameter_list  go to state 36
    parameter       go to state 37
    type_specifier  go to state 38


state 27

   15 function_definition: main_prologue LPAREN . RPAREN function_body
   16                    | main_prologue LPAREN . parameter_list RPAREN function_body

    TYPE_INT       shift, and go to state 4
    TYPE_FLOAT     shift, and go to state 5
    TYPE_DOUBLE    shift, and go to state 6
    TYPE_LONG_INT  shift, and go to state 7
    TYPE_CHAR      shift, and go to state 8
    TYPE_BOOL      shift, and go to state 9
    TYPE_VOID      shift, and go to state 10
    RPAREN         shift, and go to state 39

    parameter_list  go to state 40
    parameter       go to state 37
    type_specifier  go to state 38


state 28

   14 main_prologue: type_specifier MAIN .

    $default  reduce using rule 14 (main_prologue)


state 29

   13 function_prologue: type_specifier IDENTIFIER .
   35 declarator: IDENTIFIER .
   36           | IDENTIFIER . OP_ASSIGN expression
   37           | IDENTIFIER . LBRACKET INTEGER_LITERAL RBRACKET
   38           | IDENTIFIER . LBRACKET INTEGER_LITERAL RBRACKET OP_ASSIGN LBRACE initializer_list RBRACE
   39           | IDENTIFIER . LBRACKET RBRACKET OP_ASSIGN LBRACE initializer_list RBRACE

    OP_ASSIGN  shift, and go to state 41
    LBRACKET   shift, and go to state 42

    LPAREN    reduce using rule 13 (function_prologue)
    $default  reduce using rule 35 (declarator)


state 30

   32 declaration: type_specifier declarator_list .
   34 declarator_list: declarator_list . COMMA declarator

    COMMA  shift, and go to state 43

    $default  reduce using rule 32 (declaration)


state 31

   33 declarator_list: declarator .

    $default  reduce using rule 33 (declarator_list)


state 32

    6 global_declaration: declaration SEMICOLON .

    $default  reduce using rule 6 (global_declaration)


state 33

   10 preprocessor_directive: DEFINE IDENTIFIER INTEGER_LITERAL .

    $default  reduce using rule 10 (preprocessor_directive)


state 34

   11 preprocessor_directive: DEFINE IDENTIFIER FLOAT_LITERAL .

    $default  reduce using rule 11 (preprocessor_directive)


state 35

   17 function_definition: function_prologue LPAREN RPAREN . function_body
   19                    | function_prologue LPAREN RPAREN . RETURN_TYPE_IND type_specifier function_body

    RETURN_TYPE_IND  shift, and go to state 44
    LBRACE           shift, and go to state 45

    function_body  go to state 46


state 36

   18 function_definition: function_prologue LPAREN parameter_list . RPAREN function_body
   20                    | function_prologue LPAREN parameter_list . RPAREN RETURN_TYPE_IND type_specifier function_body
   22 parameter_list: parameter_list . COMMA parameter

    COMMA   shift, and go to state 47
    RPAREN  shift, and go to state 48


state 37

   21 parameter_list: parameter .

    $default  reduce using rule 21 (parameter_list)


state 38

   23 parameter: type_specifier . IDENTIFIER
   24          | type_specifier . IDENTIFIER LBRACKET RBRACKET

    IDENTIFIER  shift, and go to state 49


state 39

   15 function_definition: main_prologue LPAREN RPAREN . function_body

    LBRACE  shift, and go to state 45

    function_body  go to state 50


state 40

   16 function_definition: main_prologue LPAREN parameter_list . RPAREN function_body
   22 parameter_list: parameter_list . COMMA parameter

    COMMA   shift, and go to state 47
    RPAREN  shift, and go to state 51


state 41

   36 declarator: IDENTIFIER OP_ASSIGN . expression

    FUNC_POWER       shift, and go to state 52
    FUNC_SQRT        shift, and go to state 53
    FUNC_FLOOR       shift, and go to state 54
    FUNC_CEIL        shift, and go to state 55
    FUNC_ABS         shift, and go to state 56
    FUNC_LOG         shift, and go to state 57
    FUNC_SIN         shift, and go to state 58
    FUNC_COS         shift, and go to state 59
    FUNC_TAN         shift, and go to state 60
    FUNC_ASIN        shift, and go to state 61
    FUNC_ACOS        shift, and go to state 62
    FUNC_ATAN        shift, and go to state 63
    FUNC_PRIME       shift, and go to state 64
    OP_SUB           shift, and go to state 65
    OP_NOT           shift, and go to state 66
    LPAREN           shift, and go to state 67
    INTEGER_LITERAL  shift, and go to state 68
    FLOAT_LITERAL    shift, and go to state 69
    STRING_LITERAL   shift, and go to state 70
    CHAR_LITERAL     shift, and go to state 71
    IDENTIFIER       shift, and go to state 72

    expression                 go to state 73
    assignment_expression      go to state 74
    assignment_target          go to state 75
    logical_or_expression      go to state 76
    logical_and_expression     go to state 77
    logical_xor_expression     go to state 78
    equality_expression        go to state 79
    relational_expression      go to state 80
    additive_expression        go to state 81
    multiplicative_expression  go to state 82
    unary_expression           go to state 83
    postfix_expression         go to state 84
    primary_expression         go to state 85
    function_call              go to state 86
    math_function_call         go to state 87


state 42

   37 declarator: IDENTIFIER LBRACKET . INTEGER_LITERAL RBRACKET
   38           | IDENTIFIER LBRACKET . INTEGER_LITERAL RBRACKET OP_ASSIGN LBRACE initializer_list RBRACE
   39           | IDENTIFIER LBRACKET . RBRACKET OP_ASSIGN LBRACE initializer_list RBRACE

    RBRACKET         shift, and go to state 88
    INTEGER_LITERAL  shift, and go to state 89


state 43

   34 declarator_list: declarator_list COMMA . declarator

    IDENTIFIER  shift, and go to state 90

    declarator  go to state 91


state 44

   19 function_definition: function_prologue LPAREN RPAREN RETURN_TYPE_IND . type_specifier function_body

    TYPE_INT       shift, and go to state 4
    TYPE_FLOAT     shift, and go to state 5
    TYPE_DOUBLE    shift, and go to state 6
    TYPE_LONG_INT  shift, and go to state 7
    TYPE_CHAR      shift, and go to state 8
    TYPE_BOOL      shift, and go to state 9
    TYPE_VOID      shift, and go to state 10

    type_specifier  go to state 92


state 45

   42 function_body: LBRACE . RBRACE
   43              | LBRACE . statement_list RBRACE

    error            shift, and go to state 93
    TYPE_INT         shift, and go to state 4
    TYPE_FLOAT       shift, and go to state 5
    TYPE_DOUBLE      shift, and go to state 6
    TYPE_LONG_INT    shift, and go to state 7
    TYPE_CHAR        shift, and go to state 8
    TYPE_BOOL        shift, and go to state 9
    TYPE_VOID        shift, and go to state 10
    IF               shift, and go to state 94
    FOR              shift, and go to state 95
    WHILE            shift, and go to state 96
    DO               shift, and go to state 97
    SWITCH           shift, and go to state 98
    BREAK            shift, and go to state 99
    CONTINUE         shift, and go to state 100
    RETURN           shift, and go to state 101
    PRINT            shift, and go to state 102
    SCAN             shift, and go to state 103
    FUNC_POWER       shift, and go to state 52
    FUNC_SQRT        shift, and go to state 53
    FUNC_FLOOR       shift, and go to state 54
    FUNC_CEIL        shift, and go to state 55
    FUNC_ABS         shift, and go to state 56
    FUNC_LOG         shift, and go to state 57
    FUNC_SIN         shift, and go to state 58
    FUNC_COS         shift, and go to state 59
    FUNC_TAN         shift, and go to state 60
    FUNC_ASIN        shift, and go to state 61
    FUNC_ACOS        shift, and go to state 62
    FUNC_ATAN        shift, and go to state 63
    FUNC_PRIME       shift, and go to state 64
    OP_SUB           shift, and go to state 65
    OP_NOT           shift, and go to state 66
    SEMICOLON        shift, and go to state 104
    LPAREN           shift, and go to state 67
    LBRACE           shift, and go to state 105
    RBRACE           shift, and go to state 106
    INTEGER_LITERAL  shift, and go to state 68
    FLOAT_LITERAL    shift, and go to state 69
    STRING_LITERAL   shift, and go to state 70
    CHAR_LITERAL     shift, and go to state 71
    IDENTIFIER       shift, and go to state 72

    type_specifier             go to state 107
    declaration                go to state 108
    scoped_compound_statement  go to state 109
    statement_list             go to state 110
    statement                  go to state 111
    expression_statement       go to state 112
    selection_statement        go to state 113
    iteration_statement        go to state 114
    jump_statement             go to state 115
    io_statement               go to state 116
    expression                 go to state 117
    assignment_expression      go to state 74
    assignment_target          go to state 75
    logical_or_expression      go to state 76
    logical_and_expression     go to state 77
    logical_xor_expression     go to state 78
    equality_expression        go to state 79
    relational_expression      go to state 80
    additive_expression        go to state 81
    multiplicative_expression  go to state 82
    unary_expression           go to state 83
    postfix_expression         go to state 84
    primary_expression         go to state 85
    function_call              go to state 86
    math_function_call         go to state 87


state 46

   17 function_definition: function_prologue LPAREN RPAREN function_body .

    $default  reduce using rule 17 (function_definition)


state 47

   22 parameter_list: parameter_list COMMA . parameter

    TYPE_INT       shift, and go to state 4
    TYPE_FLOAT     shift, and go to state 5
    TYPE_DOUBLE    shift, and go to state 6
    TYPE_LONG_INT  shift, and go to state 7
    TYPE_CHAR      shift, and go to state 8
    TYPE_BOOL      shift, and go to state 9
    TYPE_VOID      shift, and go to state 10

    parameter       go to state 118
    type_specifier  go to state 38


state 48

   18 function_definition: function_prologue LPAREN parameter_list RPAREN . function_body
   20                    | function_prologue LPAREN parameter_list RPAREN . RETURN_TYPE_IND type_specifier function_body

    RETURN_TYPE_IND  shift, and go to state 119
    LBRACE           shift, and go to state 45

    function_body  go to state 120


state 49

   23 parameter: type_specifier IDENTIFIER .
   24          | type_specifier IDENTIFIER . LBRACKET RBRACKET

    LBRACKET  shift, and go to state 121

    $default  reduce using rule 23 (parameter)


state 50

   15 function_definition: main_prologue LPAREN RPAREN function_body .

    $default  reduce using rule 15 (function_definition)


state 51

   16 function_definition: main_prologue LPAREN parameter_list RPAREN . function_body

    LBRACE  shift, and go to state 45

    function_body  go to state 122


state 52

  131 math_function_call: FUNC_POWER . LPAREN expression COMMA expression RPAREN

    LPAREN  shift, and go to state 123


state 53

  132 math_function_call: FUNC_SQRT . LPAREN expression RPAREN

    LPAREN  shift, and go to state 124


state 54

  133 math_function_call: FUNC_FLOOR . LPAREN expression RPAREN

    LPAREN  shift, and go to state 125


state 55

  134 math_function_call: FUNC_CEIL . LPAREN expression RPAREN

    LPAREN  shift, and go to state 126


state 56

  135 math_function_call: FUNC_ABS . LPAREN expression RPAREN

    LPAREN  shift, and go to state 127


state 57

  136 math_function_call: FUNC_LOG . LPAREN expression RPAREN

    LPAREN  shift, and go to state 128


state 58

  137 math_function_call: FUNC_SIN . LPAREN expression RPAREN

    LPAREN  shift, and go to state 129


state 59

  138 math_function_call: FUNC_COS . LPAREN expression RPAREN

    LPAREN  shift, and go to state 130


state 60

  139 math_function_call: FUNC_TAN . LPAREN expression RPAREN

    LPAREN  shift, and go to state 131


state 61

  140 math_function_call: FUNC_ASIN . LPAREN expression RPAREN

    LPAREN  shift, and go to state 132


state 62

  141 math_function_call: FUNC_ACOS . LPAREN expression RPAREN

    LPAREN  shift, and go to state 133


state 63

  142 math_function_call: FUNC_ATAN . LPAREN expression RPAREN

    LPAREN  shift, and go to state 134


state 64

  143 math_function_call: FUNC_PRIME . LPAREN expression RPAREN

    LPAREN  shift, and go to state 135


state 65

  115 unary_expression: OP_SUB . unary_expression

    FUNC_POWER       shift, and go to state 52
    FUNC_SQRT        shift, and go to state 53
    FUNC_FLOOR       shift, and go to state 54
    FUNC_CEIL        shift, and go to state 55
    FUNC_ABS         shift, and go to state 56
    FUNC_LOG         shift, and go to state 57
    FUNC_SIN         shift, and go to state 58
    FUNC_COS         shift, and go to state 59
    FUNC_TAN         shift, and go to state 60
    FUNC_ASIN        shift, and go to state 61
    FUNC_ACOS        shift, and go to state 62
    FUNC_ATAN        shift, and go to state 63
    FUNC_PRIME       shift, and go to state 64
    OP_SUB           shift, and go to state 65
    OP_NOT           shift, and go to state 66
    LPAREN           shift, and go to state 67
    INTEGER_LITERAL  shift, and go to state 68
    FLOAT_LITERAL    shift, and go to state 69
    STRING_LITERAL   shift, and go to state 70
    CHAR_LITERAL     shift, and go to state 71
    IDENTIFIER       shift, and go to state 136

    unary_expression    go to state 137
    postfix_expression  go to state 84
    primary_expression  go to state 85
    function_call       go to state 86
    math_function_call  go to state 87


state 66

  114 unary_expression: OP_NOT . unary_expression

    FUNC_POWER       shift, and go to state 52
    FUNC_SQRT        shift, and go to state 53
    FUNC_FLOOR       shift, and go to state 54
    FUNC_CEIL        shift, and go to state 55
    FUNC_ABS         shift, and go to state 56
    FUNC_LOG         shift, and go to state 57
    FUNC_SIN         shift, and go to state 58
    FUNC_COS         shift, and go to state 59
    FUNC_TAN         shift, and go to state 60
    FUNC_ASIN        shift, and go to state 61
    FUNC_ACOS        shift, and go to state 62
    FUNC_ATAN        shift, and go to state 63
    FUNC_PRIME       shift, and go to state 64
    OP_SUB           shift, and go to state 65
    OP_NOT           shift, and go to state 66
    LPAREN           shift, and go to state 67
    INTEGER_LITERAL  shift, and go to state 68
    FLOAT_LITERAL    shift, and go to state 69
    STRING_LITERAL   shift, and go to state 70
    CHAR_LITERAL     shift, and go to state 71
    IDENTIFIER       shift, and go to state 136

    unary_expression    go to state 138
    postfix_expression  go to state 84
    primary_expression  go to state 85
    function_call       go to state 86
    math_function_call  go to state 87


state 67

  124 primary_expression: LPAREN . expression RPAREN
